--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 <body>
   <div class="background-pattern">
     <div class="container">
+    <div class="profile-pic">
+      <img src="https://avatars.githubusercontent.com/u/67568211?v=4" alt="Profile Picture">
+    </div> 
       <h1>Random Jokes</h1>
       <button id="jokeBtn">Click for Joke</button>
       <div id="jokeContainer">
